[package]
name = "check_mate"
version = "0.1.0"
edition = "2018"
authors = ["Chris Connelly <chris@connec.co.uk>"]
description = "Check yourself before you wreck yourself."
license = "MIT"
repository = "https://github.com/connec/check_mate"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1" }
